k8s/calibre-web/statefuleset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: calibre-web 
spec:
  replicas: 1
  serviceName: calibre-web
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      name: calibre-web
      labels:
        app: calibre-web
    spec:
      containers:
      - name: calibre-web
        image: lscr.io/linuxserver/calibre-web:0.6.25-ls345
        imagePullPolicy: Always
        ports:
          - name: calibre-web
            containerPort: 8083
        volumeMounts:
        - mountPath: "/config"
          name: calibre-web-config
        - mountPath: "/books"
          name: calibre-library
      volumes:
      - name: calibre-web-config
        iscsi:
          targetPortal: 10.10.11.6:3260
          iqn: iqn.2024-10.ca.faircloth.nas:calibre-web-config
          fsType: ext4
          readOnly: false
      - name: calibre-library
        iscsi:
          targetPortal: 10.10.11.6:3260
          iqn: iqn.2024-10.ca.faircloth.nas:calibre-library
          fsType: ext4
          readOnly: false
