k8s/calibre-web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre-web
#  annotations:
#    traefik.ingress.kubernetes.io/router.tls: "true"
#    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: books.faircloth.ca
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: calibre-web
            port: 
              number: 8083
